# minipas

./: .gitignore  .justfile  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml  rustfmt.toml
docs/: book.toml
docs/js/: custom.js
docs/src/: README.md  SUMMARY.md
docs/src/cli/: README.md  build.md  check.md  emit.md  run.md
docs/src/guide/: from_binaries.md  from_source.md  hello_world.md
docs/src/lang/: arrays.md  booleans.md  break_loops.md  builtin_functions.md  comments.md  constants.md  data_types.md  flow_control.md  for_loop.md  functions.md  grammar.md  if_statement.md  keywords.md  loops.md  numbers.md  operators.md  procedures.md  program_structure.md  repeat_loop.md  strings.md  style_guide.md  syntax.md  testing.md  vars.md  while_loop.md
examples/: abbr_ops.mp  comments.mp  conditionals.mp  constants.mp  data_types.mp  date_time.mp  euclides.mp  fibonacci.mp  fizzbuzz.mp  for_loop.mp  functions.mp  haversine.mp  hello_world.mp  procedures.mp  program_full.mp  recursion.mp  repeat_loop.mp  showcase.mp  std_lib.mp  std_math.mp  strings.mp  syntax_methods.mp  sys.mp  testing.mp  variables.mp  while_loop.mp  writeln.mp
src/: grammar.pest  main.rs
src/cli/: binary.rs  build.rs  check.rs  core.rs  emit.rs  mod.rs  run.rs
src/parser/: assignment.rs  ast.rs  conditionals.rs  declarations.rs  expressions.rs  functions.rs  keywords.rs  mod.rs  params.rs  parser.rs  procedures.rs  program.rs  statements.rs  symbol_table.rs  types.rs
src/runtime/: interpreter.rs  mod.rs  operators.rs
src/runtime/std_lib/: builtins.rs  conv.rs  (+8 more)
