[package]
name = "minipas"
version = "0.8.0"
authors = ["Jorge Brunal <jorge.brunal@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Dione, a pragmatic BackEnd using Axum and Rust"
readme = "README.md"
homepage = "https://gitlab.com/HomeInside"
repository = "https://gitlab.com/HomeInside"
keywords = ["Pest", "parser", "pascal"]
categories = ["command-line-utilities", "parser-implementations", "compilers"]

[dependencies]
pest = "~2.8.1"
pest_derive = "~2.8.1"
rand = "~0.9.2"

[profile.release]
lto = true
opt-level = 2
strip = true
debug = false
panic = "abort"
