[package]
name = "minipas"
version = "1.8.0"
authors = ["Jorge Brunal <jorge.brunal@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "un lenguaje de programación interpretado **inspirado en Turbo Pascal V7**, diseñado para ser sencillo, educativo y fácil de usar."
readme = "README.md"
homepage = "https://github.com/HomeInside/minipas"
repository = "https://github.com/HomeInside/minipas"
keywords = ["Pest", "parser", "pascal"]
categories = ["command-line-utilities", "parser-implementations", "compilers"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "~2.8.1"
pest_derive = "~2.8.1"
rand = "~0.9.2"
pico-args = "~0.5.0"
bincode = "~2.0.1"

[profile.release]
lto = true
opt-level = 2
strip = true
debug = false
panic = "abort"
